--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -13,16 +13,15 @@
    font-size: 1rem;
 }
 .navbarContainer{
-    width: 70vw;
+    width: 75%;
     height: auto;
     align-items: center;
     display:flex;
     justify-content:space-around;
     text-align:center;
-    
 }
 .navbarContainer-btn{
-    width: 30vw;
+    width: 25%;
     height: auto;
     align-items: center;
     display: flex;
@@ -36,6 +35,7 @@
     color: #F9F9F9;
     font-size: 1rem;
     font-weight: 700;
+    letter-spacing: .05rem;
     text-transform: uppercase;
     text-decoration: none;
 }
