--- a/src/Routers/About.css
+++ b/src/Routers/About.css
@@ -1,5 +1,6 @@
 .aboutContainer{
     width: 100%;
+    min-width: 800px;
     height: 90vh;
     background-color:thistle;
     align-items: center;
@@ -12,7 +13,12 @@
     align-items: center;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
+}
+.aboutContainer-superior h2{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .aboutContainer-inferior{
     width: 100%;
