--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -22,13 +22,23 @@
 }
 .navbarContainer-btn{
     width: 20%;
-    height:auto;
+    height:10vh;
     align-items: center;
     display: flex;
-    justify-content: right;
+    justify-content: center;
 }
 .sign-btn{
-    width: 40%;
+    width: auto;
+    height: 1.2rem;
+    align-items: center;
+    display: flex;
+    justify-content: center; 
+    cursor:pointer;
+    border-radius: 5px;
+    background-color: var(--ColorRojo);
+}
+.sign-btn:hover{
+    background-color: #fff;
 }
 .navbar-links{
     width:100%;
@@ -38,8 +48,7 @@
     font-weight: 700;
     letter-spacing: .05rem;
     text-transform: uppercase;
-    text-decoration: none;
-    
+    text-decoration: none; 
 }
 
 .navbar-links:hover{
