--- a/src/Routers/About.css
+++ b/src/Routers/About.css
@@ -24,23 +24,29 @@
     width: 100%;
     height: 50vh;
     padding: 1rem 0 1rem 0;
-    align-items: flex-start;
     display: flex;
     flex-direction: column;
-    background-color: var(--ColorRojo);
+    align-items: center;
 }
 .aboutContainer-inferior-title{
-    width: 100%;
+    width: 35%;
     height: 5vh;
     min-height: 5vh;
     align-items: center;
     display: flex;
     justify-content: center;
+    background-color: black;
+    color: #fff;
+    padding: 1.2rem 0 1.2rem 0;
+    border: 2px solid black;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    border-radius: 5px;
 }
 .aboutContainer-card{
     width: 100%;
-    height: auto;
-    align-items:flex-start;
+    height: 45vh;
+    align-items:center;
     display: flex;
     flex-direction: row;
     justify-content:space-around;
@@ -48,17 +54,20 @@
 .card{
     width: 8rem;
     height: 12rem;
-    background-color: blue;
     border-radius: 10px;
     border-width: 2px;
     border-style: solid;
     border-color: black;
     overflow: hidden;
+    
 }
 .card-img{
     width: 100%;
     height: 80%;
-    background-color: yellow;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
 }
 .card-description{
     width: 100%;
@@ -77,4 +86,5 @@
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
+    padding-left: 2rem;
 }
