--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
-*{
+* {
   margin: 0;
   box-sizing: border-box;
-  font-family:sans-serif;
+  font-family: sans-serif;
 }
 
-:root{
-  --ColorRojo:rgba(255,0,0,255);
-  --ColorMorado:rgba(145,71,255,255);
+:root {
+  --ColorRojo: rgba(255, 0, 0, 255);
+  --ColorMorado: rgba(145, 71, 255, 255);
 }
-body{
+body {
   font-size: 16px;
 }
-
