--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -11,6 +11,7 @@
    justify-content: space-around;
    z-index: 99;
    font-size: 1rem;
+   border-bottom: 1.5px solid black;
 }
 .navbarContainer{
     width: 80%;
@@ -29,7 +30,7 @@
 }
 .sign-btn{
     width: auto;
-    height: 1.2rem;
+    height: 1.4rem;
     align-items: center;
     display: flex;
     justify-content: center; 
