--- a/src/Routers/Questions.css
+++ b/src/Routers/Questions.css
@@ -33,16 +33,7 @@
 } */
 
 /* TEXT CSS*/
-h1 {
-  margin: 0;
-  line-height: 2;
-  text-align: center;
-}
-h2 {
-  margin: 0 0 0.5em;
-  font-weight: normal;
-}
-input {
+.in {
   position: absolute;
   opacity: 0;
   z-index: -1;
@@ -106,13 +97,13 @@ input {
 .tab-close:hover {
   background: #1a252f;
 }
-input:checked + .tab-label {
+.in:checked + .tab-label {
   background: #1a252f;
 }
-input:checked + .tab-label::after {
+.in:checked + .tab-label::after {
   transform: rotate(90deg);
 }
-input:checked ~ .tab-content {
+.in:checked ~ .tab-content {
   max-height: 100vh;
   padding: 1em;
 }
