--- a/src/Routers/Home.css
+++ b/src/Routers/Home.css
@@ -2,6 +2,7 @@
     width: 100%;
     min-width: 800px;
     min-height: fit-content;
+    background-color: rgb(236, 240, 241);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -11,9 +12,9 @@
     margin-top: 2rem;
     width: 90%;
     height: 2rem;
-    background-color: var(--ColorMorado);
-    color: #fff;
-    border: 2px solid black;
+    background-color: #d2a2cc;
+    color: black;
+    border: 1px solid black;
     padding-top: .5rem;
     padding-bottom: .5rem;
     padding-left: 1rem;
@@ -22,15 +23,16 @@
     justify-content: left;
     border-radius: 4px;
     letter-spacing: .1rem;
+    text-transform: uppercase;
 }
 .separator{
     margin-top: 2rem;
     margin-bottom: 2rem;
     width: 90%;
     height: 2rem;
-    background-color: var(--ColorMorado);
+    background-color: #d2a2cc;
+    border: 1px solid black;
     color: #fff;
-    border: 2px solid black;
     border-radius: 4px;
 }
 .homeContainer-profile{
@@ -43,7 +45,7 @@
 }
 .home-profile{
     width: 13%;
-    height: 18rem;
+    min-height: fit-content;
     border-radius: 4px;
     border-width: 2px;
     border-style: solid;
@@ -84,10 +86,24 @@
     justify-content: center;
     overflow: hidden;
 }
+.home-card-description{
+    width: 100%;
+    height: 40%;
+    font-size: .8rem;
+    letter-spacing: .03rem;
+    border-top: 2px solid black;
+    background-color: #d8acfc;
+    color:#191919;
+    align-items:center;
+    text-align:center;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+}
 .home-card-name{
     width: 100%;
     height: 10%;
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight:bold;
     border-top: 2px solid black;
     color: #fff;
@@ -98,21 +114,8 @@
     justify-content: center;
     letter-spacing: .05rem;
 }
-.home-card-description{
-    width: 100%;
-    height: 40%;
-    font-size: .8rem;
-    border-top: 2px solid black;
-    background-color: var(--ColorMorado);
-    color:black;
-    align-items:center;
-    text-align:center;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-around;
-}
 .home-card-img >img{
-    min-width:100%;
+    min-width: 100%;
     min-height: 100%;
 }
 .card-button{
