--- a/src/Routers/Questions.css
+++ b/src/Routers/Questions.css
@@ -1,5 +1,5 @@
 .questionsContainer {
-  background-color: #d8bfd8;
+  background-color:rgb(236, 240, 241);
   width: 100%;
   min-width: 800px;
   height: fit-content;
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-bottom: 2rem;
 }
 
 .questionsTitle {
@@ -29,10 +30,10 @@
   color: #444444;
 }
 .answersContainer {
-  font-size: 0.5rem;
+  font-size: 1rem;
 } 
 
-.in {
+.inQ {
   position: absolute;
   opacity: 0;
   z-index: -1;
@@ -46,19 +47,20 @@
 .row .col:last-child {
   margin-left: 1em;
 }
-.tabs {
+
+.tabsQ {
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
   width: 60%;
   margin: 0 auto;
 }
-.tab-cont {
+.tabQ {
   width: 100%;
   color: white;
   overflow: hidden;
 }
-.tab-label {
+.tab-labelQ {
   display: flex;
   justify-content: space-between;
   padding: 1em;
@@ -66,24 +68,24 @@
   font-weight: bold;
   cursor: pointer;
 }
-.tab-label:hover {
+.tab-labelQ:hover {
   background: #1a252f;
 }
-.tab-label::after {
+.tab-labelQ::after {
   content: "\276F";
   width: 1em;
   height: 1em;
   text-align: center;
   transition: all 0.35s;
 }
-.tab-content {
+.tab-contentQ {
   max-height: 0;
   padding: 0 1em;
   color: #2c3e50;
   background: white;
   transition: all 0.35s;
 }
-.tab-close {
+.tab-closeQ {
   display: flex;
   justify-content: flex-end;
   padding: 1em;
@@ -91,16 +93,16 @@
   background: #2c3e50;
   cursor: pointer;
 }
-.tab-close:hover {
+.tab-closeQ:hover {
   background: #1a252f;
 }
-.in:checked + .tab-label {
+.inQ:checked + .tab-labelQ {
   background: #1a252f;
 }
-.in:checked + .tab-label::after {
+.inQ:checked + .tab-labelQ::after {
   transform: rotate(90deg);
 }
-.in:checked ~ .tab-content {
+.inQ:checked ~ .tab-contentQ {
   max-height: 100vh;
   padding: 1em;
 }
