--- a/src/Routers/Home.css
+++ b/src/Routers/Home.css
@@ -45,6 +45,7 @@
 }
 .home-profile{
     width: 13%;
+    min-width: 11rem;
     min-height: fit-content;
     border-radius: 4px;
     border-width: 2px;
@@ -56,7 +57,7 @@
     margin-top: 1rem;
 }
 .home-profile:hover{
-    transform: scale(1.05);
+    transform: scale(1.03);
 }
 .home-card{
     width: 100%;
@@ -121,12 +122,14 @@
 .card-button{
     font-size: .8rem;
     color: #fff;
-    font-weight: 600;
+    font-weight: 800;
+    letter-spacing: .2rem;
     width: 50%;
     height: 100%;
     text-decoration: none;
     cursor: pointer;
     border: none;
+    text-transform: uppercase;
 }
 .azul{
     background-color: #1cbcf8;
@@ -135,5 +138,6 @@
     background-color: black;
 }
 .card-button:hover{
-    transform: scale(1.05);
+    background-color: var(--ColorMorado);
+    color: #191919;
 }
