--- a/src/Components/TabAbout.css
+++ b/src/Components/TabAbout.css
@@ -1,30 +1,33 @@
-  .tab-panel__header {
-    font-family: 'Trebuchet MS';
-    font-size: 1rem;
-    position: relative;
-    width: 100%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .tab:nth-child(n+2) {
-      margin-left: -3px;
-  }
-  
-  .tab:hover {
-    color: black;
-    background-color: #CCC;
-  }
-  
-  .tab--selected {
-    background-color: gray;
-    color:black;
-    font-weight: bold;
-    padding:.7rem .3rem;
-    z-index: 1;
-  }
-  .tab-panel__content{
-    min-height: 15rem;
-    min-width: 30rem;
-  }
+.tab-panel__header {
+  font-family: 'Trebuchet MS';
+  font-size: 1rem;
+  position: relative;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.tab:nth-child(n+2) {
+  margin-left: -3px;
+}
+
+.tab:hover {
+  color: black;
+  background-color: #CCC;
+}
+
+.tab--selected {
+  background-color: gray;
+  color:black;
+  font-weight: bold;
+  padding:.7rem .3rem;
+  z-index: 1;
+}
+.tab-panel__content{
+  min-height: 15rem;
+  min-width: 30rem;
+}
+.text > p,ul,li{
+    text-align: justify;
+}
