--- a/src/Routers/About.css
+++ b/src/Routers/About.css
@@ -31,7 +31,6 @@
 .aboutContainer-inferior-title{
     width: 100%;
     height: 5vh;
-    min-height: 5vh;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -41,7 +40,6 @@
     border: 2px solid black;
     letter-spacing: .1rem;
     text-transform: uppercase;
-    border-radius: 5px;
 }
 .aboutContainer-card{
     width: 75%;
@@ -60,7 +58,7 @@
     border-style: solid;
     border-color: black;
     overflow: hidden;
-    
+    box-shadow: 10px 10px 17px rgba(0, 17, 0, 0.913);
 }
 .card-img{
     width: 100%;
