--- a/src/Routers/Home.css
+++ b/src/Routers/Home.css
@@ -55,6 +55,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
+    margin-left: .4rem;
+    margin-right: .4rem;
 }
 .home-profile:hover{
     transform: scale(1.03);
