--- a/src/Routers/About.css
+++ b/src/Routers/About.css
@@ -2,7 +2,7 @@
     width: 100%;
     min-width: 800px;
     min-height: 90vh;
-    background-color:thistle;
+    background-color:rgb(236, 240, 241);
     align-items: center;
     display: flex;
     flex-direction: column;
