--- a/src/Routers/Questions.css
+++ b/src/Routers/Questions.css
@@ -1,5 +1,5 @@
 .questionsContainer {
-  background-color: #d8bfd8;
+  background-color:rgb(236, 240, 241);
   width: 100%;
   min-width: 800px;
   height: fit-content;
